# FabDummy

./: FabDummy.py  README.md  pyproject.toml
fabdummy/: fabdummy.py
